[tool.poetry]
name = "image-refresher"
version = "0.1.0"
description = ""
authors = ["Melvyn de Kort <melvyn@mdekort.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
docker = "^7.0"
slack-sdk = "^3.27"
APScheduler = "^3.10.4"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
pylint = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
