[project]
name = "image-refresher"
version = "0.1.0"
description = ""
authors = [{name = "Melvyn de Kort", email = "melvyn@mdekort.nl"}]
requires-python = ">=3.9"
dependencies = [
    "docker>=7.1",
    "requests<2.33.0", # Temporarily pin version because of https://github.com/docker/docker-py/issues/3256
    "APScheduler>=3.11.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "pylint>=3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["image_refresher"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
